client/style.css
body {
  font-family: "Helvetica", sans-serif;
  margin: 1px;
}

/* ------------------------------------ */
/* ----     Main Page Elements     ---- */
/* ------------------------------------ */
#connection-wrap {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  display: flex;
  justify-content: center;
  z-index: 1040;
}
#connection {
  padding: 15px 30px;
  height: auto;
  color: #333333;
  font-family: "Helvetica", sans-serif;
  font-size: 18px;
  line-height: 20px;
}
.description {
   font-size: 16px;
}
.visibility-list {
  position: fixed;
  top: 0;
  right: 0;
  padding: 15px;
  border: 1px solid black;
  border-top: none;
  border-right: none;
  border-bottom-left-radius: 15px;
  background-color: #FFCE7A;
  z-index: 100001;
  display: none;
}
.visibility-list ul {
  padding: 0;
  margin: 0;
}
.visibility-list ul li {
  list-style: none;
}
.visibility-detector {
  position: absolute;
  left: 50%;
  top: 50%;
}
#umbraMobile {
  display: none;
}

/* ------------------------------------ */
/* ----      Example Templates     ---- */
/* ------------------------------------ */
div.demo-box {
  margin: 90px;
}

/* ------------------------------------ */
/* ----        Umbra Example       ---- */
/* ------------------------------------ */
#caster-wrap {
  position: relative;
  background-color: lightblue;
  margin: 40px auto 40px;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #555555;
  border-radius: 20px;
  -webkit-box-shadow: inset 5px 5px 10px 0px rgba(85,85,85,0.5);
  -moz-box-shadow: inset 5px 5px 10px 0px rgba(85,85,85,0.5);
  box-shadow: inset 5px 5px 10px 0px rgba(85,85,85,0.5);
}
.caster {
  font-family: cursive;
  font-size: 150px;
  font-weight: bold;
  color: #EEEEEE;
  text-shadow: 5px 5px 3px rgba(85,85,85,0.5);
}

/* ------------------------------------ */
/* ----        Iacto Example       ---- */
/* ------------------------------------ */
#app {
  margin-top: 40px;
}
#current-event {
  display:block;
  height:80px;
  font-size:80px;
  width:100%;
  text-align:center;
  margin-top:175px;
  margin-bottom:0px;
}

#carousel-container {
  width:100%;
}

#iacto-container {
  /*display: flex;*/
  position: relative;
  align-items: center;
  justify-content: center;
  height:700px;
  border:1px solid black;
  background-color: rgb(0, 37, 105);
}

#gesture-container {
  display:flex;
  justify-content:space-around;
  align-items:center;
  height:200px;
  width:100%;
  margin-top:150px;
}

.gesture {
  display:inline-block;
  height:150px;
  width:150px;
  border: 1px black solid;
  border-radius:15px;
  background-color:white;
}

#gesture-id {
  font-size: 50px;
  font-weight:200;
  color:rgb(255, 206, 0);
  display:block;
  height:75px;
  width:100%;
  text-align:center;
  margin-top:5px;
}

#instructions {
  font-size: 20px;
  color:rgb(255, 206, 0);
  font-weight:150;
  height:30px;
  width:100%;
  text-align:center;
  position:absolute;
  bottom:0px;
}

#swipe-example {
  transform: translate(0px, 0px) rotate(0deg) scale(1);
  transition:transform 0.25s;
  background-image: url("https://hammerjs.github.io/assets/img/swipe.svg");
}

#pinch-example {
  transform: translate(0px, 0px) rotate(0deg) scale(1);
  background-image: url("https://hammerjs.github.io/assets/img/pinch.svg");
}

#pan-example {
  transform: translate(0px, 0px) rotate(0deg) scale(1);
  background-image: url("https://hammerjs.github.io/assets/img/pan.svg");
}

#rotate-example {
  transform: translate(0px, 0px) rotate(0deg) scale(1);
  background-image: url("https://hammerjs.github.io/assets/img/rotate.svg");
}

#press-example {
  transform: translate(0px, 0px) rotate(0deg) scale(1);
  background-image: url("https://hammerjs.github.io/assets/img/press.svg");
}

#tap-example {
  transform: translate(0px, 0px) rotate(0deg) scale(1);
  background-image: url("https://hammerjs.github.io/assets/img/tap.svg");
  transition:height 0.25s, width 0.25s;
}

